--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,9 @@
 
 // Import your custom SCSS
 @import "mashup-example";
+
+#particles-js {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+  }
