--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,7 +9,7 @@
 @import "lib/_template";
 
 // Import your custom SCSS
-@import "mashup-example";
+@import "_mashup-example";
 
 #particles-js {
     width: 100%;
